Fix: get_offensive_features did not return anything because If we get here, the game ID was not found. This occurs when the player participates in a game but does not contribute                                                                # to an 'offensive feature'. For instance, the player gets a SH but nothing else. Here was the comment from the fix.

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,13 @@
     "from BaseballAnalytics.bin.app_utils.consolidation.consolidating_features import Feature_Consolidater\n",
     "from BaseballAnalytics.bin.app_utils.queries import Queries as Qu\n",
     "from BaseballAnalytics.bin.app_utils.common_help import Log_Helper\n",
-    "from pickle import dump, load"
+    "from pickle import dump, load\n",
+    "from traceback import print_exc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +56,7 @@
       "text/plain": "[('LAN199005020', 1990, 2, 5, 6, 2, 'LAN', 'PIT', 0),\n ('MON199005020', 1990, 2, 5, 1, 8, 'MON', 'ATL', 1),\n ('NYA199005020', 1990, 2, 5, 0, 2, 'NYA', 'OAK', 1),\n ('NYN199005020', 1990, 2, 5, 5, 0, 'NYN', 'CIN', 0),\n ('PHI199005020', 1990, 2, 5, 14, 4, 'PHI', 'HOU', 0)]"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
       "text/plain": "70101"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -238,7 +239,24 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "An error as occurred at LAN199007270. The error: 'NoneType' object is not iterable\nAn error as occurred at PIT199010030. The error: 'reusj001'\nAn error as occurred at SDN199105110. The error: 'NoneType' object is not iterable\nAn error as occurred at PHI199109030. The error: 'NoneType' object is not iterable\nAn error as occurred at FLO199504250. The error: 'FLO'\nAn error as occurred at SDN199506220. The error: 'NoneType' object is not iterable\nAn error as occurred at MON199506240. The error: 'NoneType' object is not iterable\nAn error as occurred at SDN199509010. The error: 'NoneType' object is not iterable\nAn error as occurred at SEA199603310. The error: 'SEA'\nAn error as occurred at SFN199604170. The error: 'NoneType' object is not iterable\nAn error as occurred at SDN199707030. The error: 'wellb002'\nAn error as occurred at PHI199708252. The error: 'karpr001'\nAn error as occurred at COL199709280. The error: 'gorer001'\nAn error as occurred at ARI199803310. The error: 'ARI'\nAn error as occurred at NYN199809070. The error: 'NoneType' object is not iterable\nAn error as occurred at NYN200003290. The error: 'NYN'\nAn error as occurred at ATL200004210. The error: 'parrj002'\nAn error as occurred at ANA200203310. The error: 'ANA'\nAn error as occurred at NYN200209032. The error: 'NoneType' object is not iterable\nAn error as occurred at ANA200303300. The error: 'ANA'\nAn error as occurred at FLO200306210. The error: 'stanj001'\nAn error as occurred at TBA200403300. The error: 'TBA'\nAn error as occurred at ARI200405140. The error: 'NoneType' object is not iterable\nAn error as occurred at PHI200406290. The error: 'NoneType' object is not iterable\nAn error as occurred at SFN200606280. The error: 'rheij001'\nAn error as occurred at CHN200609040. The error: 'NoneType' object is not iterable\nAn error as occurred at SFN200706220. The error: 'igawk001'\nAn error as occurred at SDN200707070. The error: 'NoneType' object is not iterable\nAn error as occurred at OAK200803250. The error: 'OAK'\nAn error as occurred at COL200807040. The error: 'bowec001'\nAn error as occurred at WAS200809240. The error: 'NoneType' object is not iterable\nAn error as occurred at CIN200905230. The error: 'NoneType' object is not iterable\nAn error as occurred at SFN200906120. The error: 'NoneType' object is not iterable\nAn error as occurred at LAN200906180. The error: 'NoneType' object is not iterable\nAn error as occurred at FLO200909120. The error: 'NoneType' object is not iterable\nAn error as occurred at WAS201009070. The error: 'NoneType' object is not iterable\nAn error as occurred at CIN201103310. The error: 'CIN'\nAn error as occurred at HOU201108210. The error: 'runzd001'\nAn error as occurred at PIT201108240. The error: 'thoma003'\nAn error as occurred at COL201109110. The error: 'NoneType' object is not iterable\nProgress: |||||||||||||||||||||||||||||||||||||--------------| 72.3% CompleteAn error as occurred at OAK201203280. The error: 'OAK'\nAn error as occurred at PHI201208290. The error: 'NoneType' object is not iterable\nAn error as occurred at HOU201303310. The error: 'HOU'\nAn error as occurred at NYN201304230. The error: 'carsr001'\nAn error as occurred at ARI201403220. The error: 'ARI'\nAn error as occurred at SDN201406030. The error: 'NoneType' object is not iterable\nAn error as occurred at SLN201504280. The error: 'NoneType' object is not iterable\nAn error as occurred at SLN201504300. The error: 'NoneType' object is not iterable\nAn error as occurred at COL201506170. The error: 'NoneType' object is not iterable\nAn error as occurred at ATL201507020. The error: 'NoneType' object is not iterable\nAn error as occurred at MIA201507110. The error: 'NoneType' object is not iterable\nAn error as occurred at NYN201605270. The error: 'NoneType' object is not iterable\nAn error as occurred at CHN201606020. The error: 'NoneType' object is not iterable\nAn error as occurred at CIN201606240. The error: 'NoneType' object is not iterable\nAn error as occurred at PIT201608230. The error: 'NoneType' object is not iterable\nAn error as occurred at CHN201705060. The error: 'NoneType' object is not iterable\nAn error as occurred at ARI201803290. The error: 'ARI'\nAn error as occurred at OAK201903200. The error: 'OAK'\nAn error as occurred at ATL201908310. The error: 'cordj001'\nAn error as occurred at WAS201909270. The error: 'plesz001'\nProgress: |||||||||||||||||||||||||||||||||||||||||||||||||||| 100.0% Complete\n"
+     "text": "Progress: |--------------------------------------------------| 1.5% CompleteTraceback (most recent call last):\n  File \"<ipython-input-11-ece352255a7b>\", line 12, in <module>\n    X.append(fc.get_game_features(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, winning_pct, game_stats))\n  File \"../../..\\BaseballAnalytics\\bin\\app_utils\\consolidation\\consolidating_features.py\", line 309, in get_game_features\n    game_features += self.sub_offensive_features(offensive_features, self.get_starting_batters(all_batters, game_stats[0], 1), game_stats[0])\n  File \"../../..\\BaseballAnalytics\\bin\\app_utils\\consolidation\\consolidating_features.py\", line 163, in sub_offensive_features\n    game_offensive_features += self.get_offensive_features(offensive_features, batter, game_id)\nTypeError: 'NoneType' object is not iterable\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "End",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-ece352255a7b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_game_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_batters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moffensive_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstarting_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwinning_pct\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\bin\\app_utils\\consolidation\\consolidating_features.py\u001b[0m in \u001b[0;36mget_game_features\u001b[1;34m(self, all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, winning_pct, game_stats)\u001b[0m\n\u001b[0;32m    308\u001b[0m         \u001b[0mgame_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub_pitching_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_starting_pitcher\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstarting_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m       \u001b[1;31m# The location of the home team within the games list.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 309\u001b[1;33m         \u001b[0mgame_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub_offensive_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffensive_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_starting_batters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_batters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    310\u001b[0m         \u001b[0mgame_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub_relief_pitching_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_relief_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\bin\\app_utils\\consolidation\\consolidating_features.py\u001b[0m in \u001b[0;36msub_offensive_features\u001b[1;34m(self, offensive_features, batters, game_id)\u001b[0m\n\u001b[0;32m    162\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mbatter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbatters\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 163\u001b[1;33m             \u001b[0mgame_offensive_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_offensive_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffensive_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    164\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mgame_offensive_features\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-ece352255a7b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mprint_exc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"End\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"An error as occurred at {}. The error: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mlh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_progress_bar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_games\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprefix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Progress:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msuffix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Complete'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlength\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: End"
+     ]
     }
    ],
    "source": [
@@ -256,7 +274,9 @@
     "        X.append(fc.get_game_features(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, winning_pct, game_stats))\n",
     "        Y.append(game_stats[8])\n",
     "    except Exception as e:\n",
+    "        print_exc()\n",
     "        print(\"An error as occurred at {}. The error: {}\".format(game_stats[0], str(e)))\n",
+    "        raise ValueError(\"End\")\n",
     "    lh.print_progress_bar(num + 1, num_games, prefix = 'Progress:', suffix = 'Complete', length = 50)\n",
     "with open(data_locs / features_pickle, 'wb') as f:\n",
     "    dump(X, f)\n",
