New: possible implementation of mlbgame api.

--- a/bin/modelling/model_four.ipynb
+++ b/bin/modelling/model_four.ipynb
@@ -572,9 +572,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 60,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Progress: |||||||||||||||||||||||||||||||||||||||||||||||||||| 100.0% Complete\n\nSample from X:\n\n[0.8709621228250141, 0.5612867013761201, 0.8612847659047361, 0.5774091780053032, 0.3548299688389107, 0.6999825807575435, 0.7419436003638687, 0.6290281998180658, 0.4838678460138967, 0.5483771072444695, 0.5612673466622797, 0.5483771072444695, 0.46451313217334084, 1.0, 0.4838678460138967, 0.7677434339133297, 0.574196295507771, 0.0, 0.412089723471312, 0.28570675035934223, 0.7296691414028194, 0.5186923898566588, 0.241754908812786, 0.4879142325900334, 0.5714398744609867, 0.5055055187055768, 0.1648358893885248, 0.4593382828056387, 0.4615404902878694, 0.3296717787770496, 0.5406617171943613, 1.0, 0.35408067727770237, 0.6439544789207865, 0.29670460089934464, 0.0, 0.9418604651162791, 0.186046511627907, 0.13953488372093026, 0.09302325581395349, 1.0, 0.0, 0.02325581395348837, 0.13953488372093026, 0.19999999999999993, 0.5833992094861661, 1.0, 0.08458498023715415, 0.0, 0.3778656126482214, 0.957312252964427, 0.08537549407114632, 1.0, 0.6486486486486487, 0.48648648648648646, 0.48648648648648646, 0.7297297297297297, 0.10810810810810807, 0.4324324324324324, 0.0, 0.5333333333333333, 0.7333333333333333]\n[0.6482715801391501, 0.6086996219937547, 0.4057997479958364, 0.5874070962911561, 1.0, 0.1065174120268074, 0.20288161282664668, 0.7000054783513814, 0.9130585635762677, 0.39261518233779513, 0.13695878453644014, 0.2739175690728803, 0.4839210386954219, 0.715217034020562, 0.2198097185953507, 0.6086996219937547, 0.599569036357992, 0.0, 0.3963, 0.36295555555555553, 0.1851888888888889, 0.5, 0.5, 0.09258888888888889, 0.12344444444444444, 0.5277666666666667, 1.0, 0.4462888888888889, 0.09258888888888889, 0.25, 0.47777777777777775, 0.5185, 0.10287777777777778, 0.46294444444444444, 0.4759222222222222, 0.0, 0.9166666666666666, 0.26666666666666666, 0.2333333333333333, 0.0, 1.0, 0.2333333333333333, 0.39999999999999997, 0.7000000000000001, 0.47414766312937456, 0.8098893655452698, 1.0, 0.0, 0.5768796568074056, 0.5762023030029352, 0.774666967712802, 0.692481372770377, 0.6707317073170732, 0.5365853658536587, 0.6585365853658538, 0.0, 0.853658536585366, 0.5853658536585367, 0.5121951219512195, 1.0, 0.6, 0.26666666666666666]\n\nSample from Y:\n\n0\n1\n"
+    }
+   ],
    "source": [
     "# Repeat the process above but with the Normalised Features.\n",
     "features_pickle = data_locs / 'game_features_normalised.pickle'\n",
@@ -594,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,9 +612,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[LibSVM]"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.543859649122807"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
    "source": [
     "sm = svm.SVC(kernel='linear', C=0.01, verbose=True).fit(X_train, y_train)\n",
     "sm.score(X_test, y_test)"
@@ -614,9 +638,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:   39.0s finished\n[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    0.3s finished\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5435554203427644"
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
    "source": [
     "rf = RandomForestClassifier(max_depth=15, random_state=0, verbose=True).fit(X_train, y_train)\n",
     "rf.score(X_test, y_test)"
@@ -624,9 +664,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.8s finished\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5536963796775175"
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
    "source": [
     "lr = LogisticRegression(max_iter=5000, verbose=True).fit(X_train, y_train)\n",
     "lr.score(X_test, y_test)"
@@ -634,9 +690,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 65,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 1, loss = 0.68875727\nIteration 2, loss = 0.68491658\nIteration 3, loss = 0.68489769\nIteration 4, loss = 0.68444597\nIteration 5, loss = 0.68381949\nIteration 6, loss = 0.68367270\nIteration 7, loss = 0.68325782\nIteration 8, loss = 0.68302302\nIteration 9, loss = 0.68241526\nIteration 10, loss = 0.68252100\nIteration 11, loss = 0.68137470\nIteration 12, loss = 0.68113286\nIteration 13, loss = 0.68107642\nIteration 14, loss = 0.68041162\nIteration 15, loss = 0.67939505\nIteration 16, loss = 0.67883445\nIteration 17, loss = 0.67785857\nIteration 18, loss = 0.67758230\nIteration 19, loss = 0.67633806\nIteration 20, loss = 0.67657134\nIteration 21, loss = 0.67564791\nIteration 22, loss = 0.67446885\nIteration 23, loss = 0.67455395\nIteration 24, loss = 0.67322650\nIteration 25, loss = 0.67283833\nIteration 26, loss = 0.67174436\nIteration 27, loss = 0.67126263\nIteration 28, loss = 0.67039370\nIteration 29, loss = 0.66999558\nIteration 30, loss = 0.66909852\nIteration 31, loss = 0.66862304\nIteration 32, loss = 0.66781286\nIteration 33, loss = 0.66701421\nIteration 34, loss = 0.66592611\nIteration 35, loss = 0.66583168\nIteration 36, loss = 0.66488094\nIteration 37, loss = 0.66397854\nIteration 38, loss = 0.66289625\nIteration 39, loss = 0.66243711\nIteration 40, loss = 0.66164398\nIteration 41, loss = 0.66129910\nIteration 42, loss = 0.66064870\nIteration 43, loss = 0.65982669\nIteration 44, loss = 0.65928350\nIteration 45, loss = 0.65927865\nIteration 46, loss = 0.65839643\nIteration 47, loss = 0.65725138\nIteration 48, loss = 0.65622440\nIteration 49, loss = 0.65611895\nIteration 50, loss = 0.65563781\nIteration 51, loss = 0.65482465\nIteration 52, loss = 0.65439709\nIteration 53, loss = 0.65398887\nIteration 54, loss = 0.65332195\nIteration 55, loss = 0.65250965\nIteration 56, loss = 0.65203857\nIteration 57, loss = 0.65149186\nIteration 58, loss = 0.65089464\nIteration 59, loss = 0.65104898\nIteration 60, loss = 0.64975897\nIteration 61, loss = 0.64922660\nIteration 62, loss = 0.64877138\nIteration 63, loss = 0.64853658\nIteration 64, loss = 0.64795902\nIteration 65, loss = 0.64687665\nIteration 66, loss = 0.64748415\nIteration 67, loss = 0.64638599\nIteration 68, loss = 0.64576631\nIteration 69, loss = 0.64503377\nIteration 70, loss = 0.64519241\nIteration 71, loss = 0.64449174\nIteration 72, loss = 0.64444618\nIteration 73, loss = 0.64495285\nIteration 74, loss = 0.64334408\nIteration 75, loss = 0.64275497\nIteration 76, loss = 0.64204997\nIteration 77, loss = 0.64208244\nIteration 78, loss = 0.64163520\nIteration 79, loss = 0.64164972\nIteration 80, loss = 0.64136619\nIteration 81, loss = 0.64049727\nIteration 82, loss = 0.64038501\nIteration 83, loss = 0.63960761\nIteration 84, loss = 0.63974832\nIteration 85, loss = 0.63888467\nIteration 86, loss = 0.63917113\nIteration 87, loss = 0.63772082\nIteration 88, loss = 0.63749978\nIteration 89, loss = 0.63720323\nIteration 90, loss = 0.63700922\nIteration 91, loss = 0.63630039\nIteration 92, loss = 0.63628220\nIteration 93, loss = 0.63562409\nIteration 94, loss = 0.63595112\nIteration 95, loss = 0.63526869\nIteration 96, loss = 0.63416677\nIteration 97, loss = 0.63493198\nIteration 98, loss = 0.63442997\nIteration 99, loss = 0.63414061\nIteration 100, loss = 0.63370085\nIteration 101, loss = 0.63356124\nIteration 102, loss = 0.63353973\nIteration 103, loss = 0.63357905\nIteration 104, loss = 0.63156445\nIteration 105, loss = 0.63175190\nIteration 106, loss = 0.63235253\nIteration 107, loss = 0.63131235\nIteration 108, loss = 0.63161324\nIteration 109, loss = 0.63082575\nIteration 110, loss = 0.63029088\nIteration 111, loss = 0.62997547\nIteration 112, loss = 0.63003873\nIteration 113, loss = 0.62932863\nIteration 114, loss = 0.62957602\nIteration 115, loss = 0.63004842\nIteration 116, loss = 0.62874108\nIteration 117, loss = 0.62890270\nIteration 118, loss = 0.62806627\nIteration 119, loss = 0.62820296\nIteration 120, loss = 0.62728397\nIteration 121, loss = 0.62826263\nIteration 122, loss = 0.62692296\nIteration 123, loss = 0.62649364\nIteration 124, loss = 0.62683409\nIteration 125, loss = 0.62682740\nIteration 126, loss = 0.62537816\nIteration 127, loss = 0.62526415\nIteration 128, loss = 0.62566029\nIteration 129, loss = 0.62480754\nIteration 130, loss = 0.62614894\nIteration 131, loss = 0.62570493\nIteration 132, loss = 0.62432489\nIteration 133, loss = 0.62428469\nIteration 134, loss = 0.62425692\nIteration 135, loss = 0.62437316\nIteration 136, loss = 0.62366758\nIteration 137, loss = 0.62416192\nIteration 138, loss = 0.62255688\nIteration 139, loss = 0.62277320\nIteration 140, loss = 0.62298633\nIteration 141, loss = 0.62259779\nIteration 142, loss = 0.62187502\nIteration 143, loss = 0.62230829\nIteration 144, loss = 0.62134337\nIteration 145, loss = 0.62161498\nIteration 146, loss = 0.62122769\nIteration 147, loss = 0.62213778\nIteration 148, loss = 0.62180566\nIteration 149, loss = 0.62109370\nIteration 150, loss = 0.61963556\nIteration 151, loss = 0.62052141\nIteration 152, loss = 0.62085847\nIteration 153, loss = 0.61982694\nIteration 154, loss = 0.61962010\nIteration 155, loss = 0.61956622\nIteration 156, loss = 0.61978546\nIteration 157, loss = 0.61878410\nIteration 158, loss = 0.61903694\nIteration 159, loss = 0.61991212\nIteration 160, loss = 0.61912692\nIteration 161, loss = 0.61832897\nIteration 162, loss = 0.61853910\nIteration 163, loss = 0.61710464\nIteration 164, loss = 0.61782692\nIteration 165, loss = 0.61788959\nIteration 166, loss = 0.61714014\nIteration 167, loss = 0.61765439\nIteration 168, loss = 0.61740736\nIteration 169, loss = 0.61685785\nIteration 170, loss = 0.61574147\nIteration 171, loss = 0.61591295\nIteration 172, loss = 0.61648505\nIteration 173, loss = 0.61649473\nIteration 174, loss = 0.61574426\nIteration 175, loss = 0.61683832\nIteration 176, loss = 0.61560239\nIteration 177, loss = 0.61569741\nIteration 178, loss = 0.61523766\nIteration 179, loss = 0.61575481\nIteration 180, loss = 0.61534186\nIteration 181, loss = 0.61476434\nIteration 182, loss = 0.61415266\nIteration 183, loss = 0.61467368\nIteration 184, loss = 0.61449203\nIteration 185, loss = 0.61461452\nIteration 186, loss = 0.61297300\nIteration 187, loss = 0.61326321\nIteration 188, loss = 0.61395664\nIteration 189, loss = 0.61307983\nIteration 190, loss = 0.61349552\nIteration 191, loss = 0.61242787\nIteration 192, loss = 0.61206499\nIteration 193, loss = 0.61290348\nIteration 194, loss = 0.61175982\nIteration 195, loss = 0.61243815\nIteration 196, loss = 0.61163350\nIteration 197, loss = 0.61224053\nIteration 198, loss = 0.61133657\nIteration 199, loss = 0.61255203\nIteration 200, loss = 0.61127049\nIteration 201, loss = 0.61332008\nIteration 202, loss = 0.61068798\nIteration 203, loss = 0.61120097\nIteration 204, loss = 0.61088825\nIteration 205, loss = 0.61132843\nIteration 206, loss = 0.61074685\nIteration 207, loss = 0.61053382\nIteration 208, loss = 0.60999224\nIteration 209, loss = 0.61104841\nIteration 210, loss = 0.61041234\nIteration 211, loss = 0.60924111\nIteration 212, loss = 0.60985485\nIteration 213, loss = 0.60968667\nIteration 214, loss = 0.60885448\nIteration 215, loss = 0.60869783\nIteration 216, loss = 0.61031167\nIteration 217, loss = 0.60844143\nIteration 218, loss = 0.60941767\nIteration 219, loss = 0.60830168\nIteration 220, loss = 0.60894390\nIteration 221, loss = 0.60805615\nIteration 222, loss = 0.60937206\nIteration 223, loss = 0.60845071\nIteration 224, loss = 0.60896639\nIteration 225, loss = 0.60846358\nIteration 226, loss = 0.60733895\nIteration 227, loss = 0.60817076\nIteration 228, loss = 0.60788295\nIteration 229, loss = 0.60807835\nIteration 230, loss = 0.60841664\nIteration 231, loss = 0.60736479\nIteration 232, loss = 0.60820368\nIteration 233, loss = 0.60665071\nIteration 234, loss = 0.60660295\nIteration 235, loss = 0.60725590\nIteration 236, loss = 0.60792814\nIteration 237, loss = 0.60704644\nIteration 238, loss = 0.60655348\nIteration 239, loss = 0.60737547\nIteration 240, loss = 0.60682088\nIteration 241, loss = 0.60646459\nIteration 242, loss = 0.60627228\nIteration 243, loss = 0.60603891\nIteration 244, loss = 0.60697564\nIteration 245, loss = 0.60545273\nIteration 246, loss = 0.60682892\nIteration 247, loss = 0.60607255\nIteration 248, loss = 0.60570760\nIteration 249, loss = 0.60574550\nIteration 250, loss = 0.60540756\nIteration 251, loss = 0.60598387\nIteration 252, loss = 0.60566971\nIteration 253, loss = 0.60484312\nIteration 254, loss = 0.60531555\nIteration 255, loss = 0.60460028\nIteration 256, loss = 0.60473050\nIteration 257, loss = 0.60365450\nIteration 258, loss = 0.60535838\nIteration 259, loss = 0.60437708\nIteration 260, loss = 0.60472142\nIteration 261, loss = 0.60492581\nIteration 262, loss = 0.60496604\nIteration 263, loss = 0.60392127\nIteration 264, loss = 0.60493936\nIteration 265, loss = 0.60373726\nIteration 266, loss = 0.60433861\nIteration 267, loss = 0.60455246\nIteration 268, loss = 0.60405988\nTraining loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5211439002129602"
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
    "source": [
     "mlp = MLPClassifier(random_state=1, max_iter=2000, verbose=True).fit(X_train, y_train)\n",
     "mlp.score(X_test, y_test)"
@@ -644,12 +716,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5483216712300983"
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
    "source": [
     "xg_cl = xgboost.XGBClassifier(objective='binary:logistic', n_estimators=10, seed=123).fit(np.asarray(X_train, dtype=np.float32), np.asarray(y_train, dtype=np.float32))\n",
     "xg_cl.score(np.asarray(X_test, dtype=np.float32), np.asarray(y_test, dtype=np.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[0.54065566 0.56271393 0.55145661 0.55564007 0.55583447]\n"
+    }
+   ],
+   "source": [
+    "lr_cv = LogisticRegression(max_iter=2000)\n",
+    "cv_scores = cross_val_score(lr_cv, X, Y, cv=5)\n",
+    "print(cv_scores)"
    ]
   },
   {
